test/visibility/import/duplicateMod.good
duplicateMod.chpl:8: error: duplicate mention of the same module 'Sub'
